package assets;

public interface Asset {

    public int getX();

    public int getY();

    public void setX(int x);

    public void setY(int y);

    public String getIcon();

}
